--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
 <resources>
     <string name="app_name">AuApp</string>
-    <string name="favourite_vacancies">Favourite vacancies</string>
-    <string name="exit">Exit</string>
-    <string name="all_kg_vacancies">All vacancies in Kyrgyzstan</string>
-    <string name="please_wait">Please wait...</string>
+
+    <string name="title_all_kg_vacancies">All vacancies in Kyrgyzstan</string>
+    <string name="title_exit">Exit</string>
+    <string name="title_favourite_vacancies">Favourite vacancies</string>
+
+    <string name="action_please_wait">Please wait…</string>
+    <string name="action_vacancy_added">Vacancy successfully added</string>
+    <string name="action_vacancy_deleted">Vacancy deleted</string>
+
+    <string name="msg_no_internet_connection">No internet connection</string>
 </resources>
